--- a/ticketmanager.client/src/App.css
+++ b/ticketmanager.client/src/App.css
@@ -1,7 +1,14 @@
-﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+﻿body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+#root {
+    width: 100%;
+    margin-bottom: 2rem;
     text-align: center;
 }
 
