--- a/ticketmanager.client/src/index.css
+++ b/ticketmanager.client/src/index.css
@@ -25,7 +25,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -57,7 +58,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color:	#FAF9F6;
   }
   a:hover {
     color: #747bff;
