fix ugly colors and body height

--- a/ticketmanager.client/src/App.css
+++ b/ticketmanager.client/src/App.css
@@ -8,12 +8,11 @@
 
 #root {
     width: 100%;
-    margin-bottom: 2rem;
     text-align: center;
 }
 
 tr:nth-child(even) {
-    background: #F2F2F2;
+    background: #F2FDFF
 }
 
 tr:nth-child(odd) {
